# sourcegraph-mcp

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
src/: .env.sample  config.py  exceptions.py  main.py  server.py
src/prompts/: prompts.yaml
