[project]
name = "sourcegraph-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Sourcegraph code search"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Erfan Mirshams", email = "erfan.mirshams@gmail.com" }
]
keywords = ["mcp", "sourcegraph", "code-search", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp==2.12.0",
    "mcp-server==0.1.4",
    "mcp[cli]==1.13.1",
    "pydantic==2.11.7",
    "pydantic-ai[logfire]==1.6.0",
    "requests==2.32.4",
    "jinja2==3.1.6",
    "pyyaml==6.0.2",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.3",
]

[project.scripts]
sourcegraph-mcp = "sourcegraph_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sourcegraph_mcp"]
package-dir = {"sourcegraph_mcp" = "src"}

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length is handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]